@@ -14,7 +14,6 @@ TODO Android
 	on small ldpi "Start Game" button still not visable
 
     INGAME SCREEN:
-	when map is loading, should show a loading screen
 	attack and move screen need to take into account dpi when drawing the countries
 	in capital mode, the circles around countries look wrong, maybe draw 2 or use thicker lines
 	when placing armies, the player can only place 1 army at a time, no choice to place 1 or 5 or 10 or 25 ...
