@@ -18,6 +18,7 @@ CURRENT VERSION:
 	when you must trade, the "End Trade" button becomes disabled/hidden
 
 	Android 8 fixed - WARNING: trying to set a transparent color: 0 (going from mainmenu to newgame)
+		  DONE - when map is loading, should show a loading screen
 	Android 7 handle OutOfMemoryError much better when loading the map
 		  nice theme added for main menu buttons
 		  nice theme added for cards
